--- a/blogpost.html
+++ b/blogpost.html
@@ -6,10 +6,13 @@
 </head>
 <body>
 	<div id="container">
-		<h1>Aqui vamos a hacer un blog post</h1>
+		<div id="cabecera">
+			cabecera
+			
+		</div>
 		<div id="post">
-		<p> Este es el parrafo de inicio Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			<h1>Aqui vamos a hacer un blog post</h1>
+			<p> Este es el parrafo de inicio Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
