--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 	<div id="container">
 		<div id="cabecera">
 			Hyperblog
-			<span id="tagline"> tu blog de confianza</span>
+			<span id="tagline"> tu blog maestro</span>
 		</div>
 		<div id="post">
 			<h1>Aqui vamos a hacer un blog post</h1>
@@ -23,6 +23,7 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. es
 		</p>
+		<p>Suscribete y dale like</p>
 	</div>
 	</div>
 	
