--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 	<div id="container">
 		<div id="cabecera">
 			Hyperblog
-			<span id="tagline"> tu blog de cabecera</span>
+			<span id="tagline"> Bienvenido a Hyperblog</span>
 		</div>
 		<div id="post">
 			<h1>Aqui vamos a hacer un blog post</h1>
