--- a/blogpost.html
+++ b/blogpost.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>El titulo del post</title>
+	<title>Bienvenido a hyperblog</title>
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 	<div id="container">
 		<div id="cabecera">
 			Hyperblog
-			<span id="tagline"> Bienvenido a Hyperblog</span>
+			<span id="tagline"> Tu blog de cabecera</span>
 		</div>
 		<div id="post">
 			<h1>Aqui vamos a hacer un blog post</h1>
